# LastWarBot

./: .gitignore  LICENSE  LastWarBot.spec  README.md  RELEASE_NOTES_v0.2.2.md  config.yaml  pyproject.toml  release_start.bat  run_lastwar_bot.py  start.bat
lastwar_bot/: __init__.py  actions.py  capture.py  cli.py  config.py  event_log.py  hotkey.py  logging_utils.py  models.py  notifier.py  ocr.py  process.py  runtime.py  vision.py
releases/: README.md  start.bat.template
releases/v0.2.0/: README.md
releases/v0.2.1/: RELEASE_NOTES_v0.2.1.md
releases/v0.2.2/: RELEASE_NOTES_v0.2.2.md
releases/v0.2.3/: RELEASE_NOTES_v0.2.3.md
releases/v0.2.4/: RELEASE_NOTES_v0.2.4.md
tests/: test_config.py  test_notifier.py  test_ocr.py  test_process.py  test_runtime.py  test_vision.py
