[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lastwar-bot"
version = "0.2.3"
description = "Automation bot for Last War: Survival on Windows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard==0.13.5",
    "mss==10.1.0",
    "numpy==2.4.3",
    "opencv-python==4.13.0.92",
    "paddleocr==2.10.0",
    "paddlepaddle==3.1.1",
    "Pillow==12.1.1",
    "psutil==7.2.2",
    "PyAutoGUI==0.9.54",
    "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lastwar_bot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
